--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,11 @@
   --card-bg-color: hsl(216, 50%, 16%);
   --line-color: hsl(215, 32%, 27%);
   --cyan: hsl(178, 100%, 50%);
+  --light-cyan: hsl(178, 100%, 50%, 50%);
   --soft-blue: hsl(215, 51%, 70%);
 }
 * {
-  font-family: 'Outfit', sans-serif;
+  font-family: "Outfit", sans-serif;
   letter-spacing: 2px;
 }
 body {
@@ -36,14 +37,35 @@ body {
   width: 300px;
   height: 300px;
   margin: auto;
+  position: relative;
+  border-radius: 10px;
+  overflow: hidden;
+}
+#image-card:hover {
+  cursor: pointer;
+}
+#image-card:hover > img:last-child {
+  visibility: visible;
 }
 #image-card img:first-child {
+  position: inherit;
   width: 100%;
   height: 100%;
+}
+#image-card img:last-child {
+  visibility: hidden;
+  top: 120px;
+  left: 127px;
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-color: var(--light-cyan);
+  box-shadow: 0 0 0 150px var(--light-cyan);
 }
 #nft-description {
   font-size: 18px;
   line-height: 1.5em;
+  margin-top: 0;
 }
 #stats {
   display: flex;
@@ -87,6 +109,7 @@ body {
 h1 {
   color: white;
   font-size: 20px;
+  display: inline-flex;
 }
 h1:hover {
   color: var(--cyan);
