--- a/index.css
+++ b/index.css
@@ -16,6 +16,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 800px;
 }
 .card {
   border-radius: 10px;
@@ -26,6 +27,23 @@ body {
 }
 .text-margin {
   margin: 20px 25px;
+}
+.flex-item-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#outer-shadow {
+  background-color: #0C182D;
+  width: 430px;
+  height: 760px;
+  border-radius: 20px;
+}
+#dim-shadow {
+  background-color: #0C1628;
+  width: 390px;
+  height: 640px;
+  border-radius: 20px;
 }
 #main-card {
   background-color: var(--card-bg-color);
@@ -89,8 +107,9 @@ body {
   align-items: center;
 }
 #footer img {
-  width: 40px;
-  height: 40px;
+  width: 42px;
+  height: 43px;
+  padding: 0 0;
   border: 2px solid white;
   border-radius: 50%;
 }
